esp/esp/themes/theme_data/droplets/less/main.less
:root {
    /* this is to pass the less-defined navbarCollapseWidth to Javascript */
    --width-breakpoint: @navbarCollapseWidth;
}

#main {
    h1 {
        font-size: 42px;
        font-weight: normal;
        margin-bottom: 0.5em;
    }

    h2 {
        font-size: 32px;
        font-weight: normal;
        margin-bottom: 0.3em;
    }

    a {
        text-decoration: underline;
    }

    .btn {
        background-image: none;
        white-space: normal;
        max-width: 100%;

        &:active,
        &:focus {
            outline: none;
        }
    }

    .module_link_large {

        &:active,
        &:focus {
            outline: none;
        }
    }

    .btn-primary {
        text-decoration: none;
    }

    .control-group .controls>ul {
        list-style: none;
    }

    input[type="text"],
    input[type="password"],
    textarea,
    select,
    label {
        margin: 0;
        padding: 0.3em 0.5em;
        font-size: inherit;
        line-height: normal;
        vertical-align: text-bottom;
        max-width: 100%;
    }

    input[type="text"],
    input[type="password"],
    textarea,
    select {
        box-sizing: border-box;
        display: inline-block;
        color: black;
        background-color: #fdfdfd;

        &:focus {
            -webkit-box-shadow: none;
            -moz-box-shadow: none;
            box-shadow: none;
        }
    }

    textarea {
        width: 100%;
        display: block;
    }

    input[type="text"],
    input[type="password"] {
        border-width: 1px 0px;
        border-top: 1px solid #eee;
        -webkit-border-radius: 0;
        -moz-border-radius: 0;
        border-radius: 0;
        line-height: 2.5em;
        height: 2.5em;
    }
}



body {
    box-sizing: border-box;
}

@media (min-width: @navbarCollapseDesktopWidth) {
    body {
        padding-top: 40px;
        padding-bottom: 40px;
    }
}

.header-cell {
    display: inline-block;
    vertical-align: bottom;
}


div.qsd_edit_visible textarea,
textarea.wide {
    font-family: monospace;
    width: 100%;
    box-sizing: border-box;
}

input,
textarea,
select,
.uneditable-input {
    vertical-align: baseline;
}

.logged_in.nav.hidden {
    display: none;
    visibility: hidden;
}

.not_logged_in.nav.hidden {
    display: none;
    visibility: hidden;
}

.admin.nav.hidden {
    display: none;
    visibility: hidden;
}

div.navbar-collapse {
    margin: 0;
}

.navbar-fixed-bottom #footer ul>li>a {
    padding: 0px;
}

.btn:hover {
    background-position: 0;
}

@media (min-width: 768px) and (max-width: @navbarCollapseWidth) {

    .navbar-container,
    .footer-container {
        width: 100%;
    }
}

@media (max-width: @navbarCollapseWidth) {
    .navbar .nav>li.dropdown {
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
    }

    .navbar .nav>li>a.caret-wrapper {
        text-align: right;
    }

    .navbar .nav>li>ul.dropdown-menu {
        flex-basis: 100%;
    }

}

@media (max-width: 767px) {
    #main .btn {
        width: 100%;
        display: block;
        margin-bottom: 5px;
    }
}

@media (min-width: @navbarCollapseDesktopWidth) {

    #navbar,
    #footer {
        padding-left: 1rem;
        padding-right: 1rem;
    }

    .dropdown:hover .dropdown-menu {
        display: block;
        margin-top: 0;
        /* remove the gap so it doesn't close */
    }

    .dropdown-toggle.caret-wrapper {
        height: 20px;
    }

    .navbar .nav>.active>a {
        -webkit-box-shadow: none;
        box-shadow: none;
    }

    .navbar .nav>li>a.caret-wrapper {
        float: left;
        padding-left: 5px;
        cursor: pointer;
    }

    .navbar .nav>li>a.navbar-item-label {
        float: left;
        clear: left;
        margin-right: -10px;
        cursor: pointer;
    }
}

.navbar .nav>li>a.navbar-item-label {
    font-size: @navbarFontSize;
}

.navbar .caret {
    border-width: 7px;
}

#adminbar_content .title {
    padding: 3px 6px !important;
}

@media (min-width: @navbarCollapseDesktopWidth) {
    .adminbar_user_search .title {
        border-radius: 6px 6px 0px 0px;
    }
}

#adminbar_Manage_content,
#adminbar_Other_content {
    padding: 0px 2px !important;
}

#adminbar_content .content {
    padding: 3px 5px;
}

#adminbar_content a {
    color: #333333;
    /* should match the other navbar dropdowns */
}

@media (max-width: @navbarCollapseWidth) {
    #adminbar_content a {
        color: #999999;
    }
}

.admin .dropdown-menu {
    padding: 0px;
}

.dropdown-menu>li>div {
    display: block;
    padding: 3px 20px;
    clear: both;
    font-weight: normal;
    line-height: @baseLineHeight;
    color: @dropdownLinkColor;
    white-space: nowrap;
}

.logo {
    max-width: 300px;
    max-height: 300px;
    margin: 0;
}

.logo.nav {
    max-height: 36px;
    margin: 2px 10px 2px 0px;
}

.jumbotron {
    margin-bottom: 30px;
    position: relative;
    padding: 50px 20px;
    color: #fff;
    background-color: @jumbotronFallbackColor;
    background: @jumbotronFallbackGradient;
    text-shadow: 0 1px 3px rgba(0, 0, 0, .7), 0 0 30px rgba(0, 0, 0, .075);
    background-size: cover;
    background-position: center;
    -webkit-box-shadow: inset 0 3px 7px rgba(0, 0, 0, .2), inset 0 -3px 7px rgba(0, 0, 0, .2);
    -moz-box-shadow: inset 0 3px 7px rgba(0, 0, 0, .2), inset 0 -3px 7px rgba(0, 0, 0, .2);
    box-shadow: inset 0 3px 7px rgba(0, 0, 0, .2), inset 0 -3px 7px rgba(0, 0, 0, .2);
}

.jumbotron-announcements {
    font-size: 20px;

    p {
        margin: 0 0 0.5em;
        font-family: inherit;
        font-size: 1em;
        line-height: normal;
    }
}

.contact-form {

    th,
    td {
        padding: 4px 3px;
    }

    th {
        vertical-align: top;
        text-align: right;
        white-space: nowrap;

        label {
            display: block;
        }
    }

    td {
        vertical-align: top;
    }

    #id_message {
        width: 100% !important;
        display: block;
    }

    #id_subject {
        width: 100% !important;
    }
}

#user_search_form input {
    box-sizing: border-box;
    display: block;
    height: auto;
    margin: 0;
    width: 100%;
}

.form_error {
    color: red;
    display: inline-block;
}

/* copied from fruitsalad, but with #main instead of #content.
   TODO(benkraft): something less theme-specific for things like this. */
#main form {
    display: inline;
    margin: 0;
    padding: 0;
}

#reg_types_div {
    font-size: 13px;
}

/*input:not(.inputbox):not([type="radio"]):not([type="button"]):not([type="checkbox"]):not(
    .input-mini
  ):not(.input-small):not(.input-medium):not(.input-large):not(
    .input-xlarge
  ):not(.input-xxlarge):not([class*="span"]),
textarea:not([class*="span"]),
.uneditable-input:not([class*="span"]) {
  width: 94%;
}*/

select {
    width: auto;
}

body #shortcuts-box {
    top: 60px;
    z-index: 1000;
}

@media (max-width: @navbarCollapseWidth) {
    body #shortcuts-box {
        top: auto;
        bottom: 60px;
        right: 10px;
    }
}

